Closed Bug 925352 Opened 11 years ago Closed 11 years ago

Fix LOAD_ONLY_FROM_CACHE flag and load while offline

Categories

(Core :: Networking: Cache, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

Attachments

(1 file)

Attached patch v1Splinter Review
After bug 913807 has landed I think usage of this flag is kinda screwed up as well as decision to load from cache w/o validation when offline.  This should fix it.

https://tbpl.mozilla.org/?tree=Try&rev=790a9311cc5b // old cache
https://tbpl.mozilla.org/?tree=Try&rev=4eb8d160537b // new cache

For reference this is http channel before lading the new cache:
http://hg.mozilla.org/mozilla-central/annotate/ae180b16eda7/netwerk/protocol/http/nsHttpChannel.cpp
Attachment #815379 - Flags: review?(michal.novotny)
Attachment #815379 - Flags: review?(michal.novotny) → review+
https://hg.mozilla.org/mozilla-central/rev/f03cd4cd9cf6
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: