Bug 925352 - Fix LOAD_ONLY_FROM_CACHE flag and load while offline, r=michal